--- a/styles/architects.css
+++ b/styles/architects.css
@@ -6,3 +6,43 @@
   font-weight: 400;
   font-style: normal;
 }
+
+/* shared styles */
+.display-flex{
+    display: flex;
+}
+/* Dark-02 */
+.text-grey{
+    color: #424242;
+}
+/* Dark-03 */
+.text-light-grey{
+    color: #727272;
+}
+.bg-light{
+    background-color: rgba(255, 144, 14, 0.1);
+}
+/* header styles */
+.navbar{
+    
+}
+
+/* navbar styles */
+.navbar{justify-content: space-between;
+}
+
+.nav-links{
+
+}
+.nav-item{
+    list-style: none;
+    margin-right: 30px;
+  
+}
+.nav-link{
+    text-decoration: none;
+}
+.navbar, .banner{
+    max-width: 1440px;
+    margin: 0 auto;
+}
