--- a/styles/architects.css
+++ b/styles/architects.css
@@ -1,28 +1,36 @@
 @import url('https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap');
 
 .work-sans-font {
-  font-family: "Work Sans", serif;
-  font-optical-sizing: auto;
-  font-weight: 400;
-  font-style: normal;
+    font-family: "Work Sans", serif;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
 }
 
 /* shared styles */
-.display-flex{
+.display-flex {
     display: flex;
 }
+
+.text-primary {
+    color: #ff900e;
+}
+
 /* Dark-02 */
-.text-grey{
+.text-grey {
     color: #424242;
 }
+
 /* Dark-03 */
-.text-light-grey{
+.text-light-grey {
     color: #727272;
 }
-.bg-light{
+
+.bg-light {
     background-color: rgba(255, 144, 14, 0.1);
 }
-.btn-primary{
+
+.btn-primary {
     background-color: #ff900e;
     color: white;
     padding: 20px 25px;
@@ -31,54 +39,152 @@
     border-radius: 8px;
     border: none;
 }
+
+main {
+    max-width: 1440px;
+    margin: 0 auto;
+}
+
+main>section {
+    margin-top: 100px;
+}
+
+.section-title {
+    font-size: 2.8rem;
+    font-weight: 700;
+}
+
 /* header styles */
-.navbar{
+.navbar {
     align-items: center;
 }
-.brand{
+
+.brand {
     font-weight: 700;
     font-size: 3rem;
 }
 
 /* navbar styles */
-.navbar{justify-content: space-between;
+.navbar {
+    justify-content: space-between;
 }
 
-.nav-links{
+.nav-links {}
 
-}
-.nav-item{
+.nav-item {
     list-style: none;
     margin-right: 30px;
-  
+
 }
-.nav-link{
+
+.nav-link {
     text-decoration: none;
 }
-.navbar, .banner{
+
+.navbar,
+.banner {
     max-width: 1440px;
     margin: 0 auto;
 }
 
 /* banner styles */
-.banner-content{
+.banner-content {
     max-width: 850px;
     margin: 0 auto;
     text-align: center;
     margin-bottom: 50px;
 }
-.banner-title{
+
+.banner-title {
     font-weight: 700;
     font-size: 4rem;
 }
-.banner-img{
+
+.banner-img {
     width: 100%;
+}
+
+/* team features styles */
+.teams {
+    align-items: center;
+}
+
+.team-img-container {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 24px;
+}
+
+.our-features {
+    margin-left: 73px;
+    max-width: 530px;
+}
+
+#quick-list {
+    font-weight: 500;
+}
+
+/* fact related style */
+.facts-container {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+}
+
+.fact-card {
+    border: 1px solid #ff900e;
+    width: 240px;
+    height: 240px;
+    border-radius: 8px;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+
+}
+
+.fact-number {
+    font-size: 2.8rem;
+    font-weight: 600;
+    margin-top: 5px;
+    margin-bottom: 10px;
+
+}
+
+.fact-name {
+    font-size: 1.25rem;
+    font-weight: 600;
+    margin-top: 10px;
+}
+
+.fact-description {
+    max-width: 540px;
 }
 
 /* responsive media query */
 @media screen and (max-width: 576px) {
-    .navbar, .nav-links{
+
+    .navbar,
+    .nav-links,
+    .teams {
         flex-direction: column;
     }
-    
+
+    .team-img-container {
+        grid-template-columns: repeat(1, 1fr);
+    }
+
+    .our-features {
+        margin-left: 20px;
+    }
+}
+
+/* medium size devices */
+@media screen and (min-width: 576px) and (max-width: 992px) {
+    .teams {
+        flex-direction: column;
+        margin-left: 20px;
+    }
+
+    .our-features {
+        margin: 50px auto;
+    }
 }
