--- a/styles/architects.css
+++ b/styles/architects.css
@@ -158,6 +158,19 @@ main>section {
 .fact-description {
     max-width: 540px;
 }
+/* sponsor related styles */
+.sponsor-info{
+    max-width: 540px;
+    margin: 50px auto;
+    text-align: center;
+}
+.sponsor-companies{
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+}
+.sponsor-companies img{
+    filter: grayscale(90%);
+}
 
 /* responsive media query */
 @media screen and (max-width: 576px) {
@@ -168,14 +181,18 @@ main>section {
         flex-direction: column;
     }
 
-    .team-img-container {
+    .team-img-container, .facts-container, .sponsor-companies{
         grid-template-columns: repeat(1, 1fr);
     }
-
+    .facts-container, .sponsor-companies{
+        justify-items: center;
+        gap: 24px;
+    }
     .our-features {
         margin-left: 20px;
     }
 }
+
 
 /* medium size devices */
 @media screen and (min-width: 576px) and (max-width: 992px) {
